--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript" src="http://www.qq.com/404/search_children.js"
         charset="utf-8" homePageUrl="http://www.cylong.com/"
-        homePageName="回到笑话人生的主页">
+        homePageName="回到主页">
 </script>
 
 </body>
